#10 fixes issue with quill and firefox no-wrap attribute

--- a/src/styles/editor.less
+++ b/src/styles/editor.less
@@ -37,6 +37,7 @@ height: 60px;
   background: #FFF;
   height: calc(100% - 195px);
   @apply mx-auto container;
+  white-space:pre-wrap; /* required. Cf. https://github.com/quilljs/quill/issues/468 */
 }
 
 .ql-editor {
